[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/singleLayer.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=3]
LineEdit/styles/normal = SubResource( 2 )

[node name="singleLayer" type="Control"]
anchor_right = 0.244
anchor_bottom = 0.058
margin_right = 0.143982
margin_bottom = 0.199997
rect_min_size = Vector2( 250, 35 )
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
color = Color( 0.243137, 0.243137, 0.243137, 0 )

[node name="bg" type="ColorRect" parent="bg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = -4.0
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="bg"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
custom_constants/separation = 0

[node name="tap" type="Button" parent="bg/HBoxContainer"]
margin_right = 30.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
expand_icon = true

[node name="title" type="LineEdit" parent="bg/HBoxContainer"]
margin_left = 30.0
margin_right = 190.0
margin_bottom = 35.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
theme = SubResource( 3 )

[node name="titleButton" type="Button" parent="bg/HBoxContainer/title"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
button_mask = 3
enabled_focus_mode = 0
flat = true

[node name="visiblity" type="Button" parent="bg/HBoxContainer"]
margin_left = 190.0
margin_right = 220.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
expand_icon = true

[node name="color" type="Control" parent="bg/HBoxContainer"]
margin_left = 220.0
margin_right = 250.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 35 )

[node name="ColorPickerButton" type="ColorPickerButton" parent="bg/HBoxContainer/color"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -12.5
margin_right = 15.0
margin_bottom = 12.5
focus_mode = 0
enabled_focus_mode = 0
flat = true
color = Color( 0.101961, 0.701961, 0.901961, 0.909804 )

[node name="Button" type="Button" parent="bg/HBoxContainer/color/ColorPickerButton"]
anchor_right = 1.0
anchor_bottom = 1.0
hint_tooltip = "Left click to pick color
right click to random pick"
focus_mode = 0
mouse_filter = 1
button_mask = 2
enabled_focus_mode = 0
flat = true

[node name="left" type="Position2D" parent="bg"]
position = Vector2( 0, 17 )

[node name="down" type="Position2D" parent="bg"]
position = Vector2( 15, 35 )

[connection signal="pressed" from="bg/HBoxContainer/tap" to="." method="_on_tap_pressed"]
[connection signal="button_down" from="bg/HBoxContainer/title/titleButton" to="." method="_on_title_button_down"]
[connection signal="button_up" from="bg/HBoxContainer/title/titleButton" to="." method="_on_title_button_up"]
[connection signal="pressed" from="bg/HBoxContainer/visiblity" to="." method="_on_visiblity_pressed"]
[connection signal="button_down" from="bg/HBoxContainer/color/ColorPickerButton" to="." method="_on_ColorPickerButton_button_down"]
[connection signal="popup_closed" from="bg/HBoxContainer/color/ColorPickerButton" to="." method="_on_ColorPickerButton_pressed"]
[connection signal="pressed" from="bg/HBoxContainer/color/ColorPickerButton/Button" to="." method="_on_color_pressed"]
